# jlens-mlx

./: .gitignore  LICENSE  MIGRATION.md  NOTICE  README.md  pyproject.toml
bench/upstream_pr_eval/: README.md
docs/: DESIGN.md  abliteration_diff.md  abliteration_diff_explainer.html  fit_metrics.md  fitting_runbook.md
jlens_mlx/: __init__.py  capture.py  chain.py  corpus.py  fit.py  lens.py  verify.py
jlens_mlx/providers/: __init__.py  generic_vjp.py  qwen3_5_gdn.py
migrated_from_scratch/: README.md  convert_lens.py  lens_gemma22b.sidecar.json  make_oracle.py  mlx_apply.py  mlx_apply_gemma.py  oracle_gemma22b_eiffel.json  oracle_gemma22b_multihop.json  oracle_multihop.json  probe_thread.py  validate_moe.py  verify_endpoint.py  verify_module.py  verify_router.py
scripts/: abliteration_footprint.py  build_corpus_preview.py  capture_verifier_logs.sh  check_capture_parity.py  check_chain_vs_direct.py  check_gemma2_synthetic.py  check_gpt2_parity.py  check_progress_callback.py  check_qwen3_5_synthetic.py  check_rmsnorm_seed.py  convert_lens.py  decode_corpus.py  diff_lenses.py  direction_readout.py  fit_band_corpus.py  fit_band_supervisor.sh  fit_gpt2_baseline.py  fit_metrics.py  fit_metrics_ui.py  fit_monitor.py  fit_served_qwen_bootstrap.py  make_oracle.py  per_prompt_diff.py  readout.py  regrade_lens.py  xcheck_fit_mlx.py  xcheck_fit_torch.py
tests/: test_corpus.py  test_fit.py  test_fit_band_corpus_gate.py  test_fit_metrics.py  test_fit_metrics_ui.py  test_fit_monitor.py  test_fit_progress.py  test_verify.py
tests/fixtures/: band-n12b-corpus.json
(+21 files in other folders)
