[project]
name = "jlens-mlx"
version = "0.0.1"
description = "Modular Jacobian-lens (j-space) fitting + research on Apple silicon (MLX). Fit your own lens; the heylookitsanllm server consumes the artifact."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "mlx>=0.32",
    "mlx-lm>=0.31.3",
    "numpy>=2.0",
    "safetensors>=0.4",
]

# NOTE: fitting a `qwen3_5` (GDN-hybrid) lens needs an mlx-lm that ships the
# qwen3_5 + gated_delta arch. If a released wheel lacks it, pin the git HEAD via
# [tool.uv.sources] (as heylookitsanllm does) -- see MIGRATION.md.

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jlens_mlx"]

[tool.uv]
package = true
